WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160725
Fix compiler errors when building iOS WebKit using the iOS 10 beta SDK
https://bugs.webkit.org/show_bug.cgi?id=160725
Summary
Fix compiler errors when building iOS WebKit using the iOS 10 beta SDK
Daniel Bates
Reported
2016-08-09 18:34:29 PDT
Fix compile errors when building iOS WebKit using the iOS 10 beta SDK.
Attachments
Patch
(10.16 KB, patch)
2016-08-09 18:37 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(11.95 KB, patch)
2016-08-11 17:57 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(12.06 KB, patch)
2016-08-11 17:58 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(8.48 KB, patch)
2016-08-12 19:14 PDT
,
Daniel Bates
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-08-09 18:37:54 PDT
Created
attachment 285705
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-09 18:39:07 PDT
Attachment 285705
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/config.h:52: "wtf/Platform.h" already included at Source/JavaScriptCore/config.h:26 [build/include] [4] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:37: "PassKit/PassKit.h" already included at Source/WebCore/platform/spi/cocoa/PassKitSPI.h:30 [build/include] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:63: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:64: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:65: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:68: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebKit/mac/WebKitPrefix.h:68: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 8 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 3
2016-08-09 18:40:58 PDT
Comment on
attachment 285705
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=285705&action=review
> Source/JavaScriptCore/config.h:52 > +#include <wtf/Platform.h>
Will remove before landing.
Alexey Proskuryakov
Comment 4
2016-08-09 18:59:07 PDT
Looks like this is breaking the build.
Daniel Bates
Comment 5
2016-08-11 17:57:15 PDT
Created
attachment 285875
[details]
Patch
WebKit Commit Bot
Comment 6
2016-08-11 17:58:07 PDT
Attachment 285875
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:37: "PassKit/PassKit.h" already included at Source/WebCore/platform/spi/cocoa/PassKitSPI.h:30 [build/include] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:33: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:34: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:35: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:38: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebKit/mac/WebKitPrefix.h:38: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 7 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 7
2016-08-11 17:58:44 PDT
Created
attachment 285876
[details]
Patch
WebKit Commit Bot
Comment 8
2016-08-11 18:00:47 PDT
Attachment 285876
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:37: "PassKit/PassKit.h" already included at Source/WebCore/platform/spi/cocoa/PassKitSPI.h:30 [build/include] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:33: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:34: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:35: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit/mac/WebKitPrefix.h:38: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebKit/mac/WebKitPrefix.h:38: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 7 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 9
2016-08-11 22:19:26 PDT
The stuff in CoreTextSPI looks fine to me.
Daniel Bates
Comment 10
2016-08-12 19:14:05 PDT
Created
attachment 285995
[details]
Patch Updated the patch to disable OS_LOG when building with the iOS 10 beta SDK as per an in-person conversation with Sam Weinig. Once we fix <
rdar://problem/27758343
> we can enable OS_LOG when building with iOS 10 beta SDK.
WebKit Commit Bot
Comment 11
2016-08-12 19:16:37 PDT
Attachment 285995
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:31: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/platform/spi/cocoa/PassKitSPI.h:37: "PassKit/PassKit.h" already included at Source/WebCore/platform/spi/cocoa/PassKitSPI.h:30 [build/include] [4] ERROR: Source/WTF/wtf/Platform.h:1178: CPP comments are not allowed in Platform.h, please use C comments /* ... */ [build/cpp_comment] [5] ERROR: Source/WTF/wtf/Platform.h:1178: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WTF/wtf/Platform.h:1178: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 5 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 12
2016-08-14 15:43:55 PDT
Committed
r204456
: <
http://trac.webkit.org/changeset/204456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug